fix list item numbers being cut off
i think `overflow: hidden;` existed prior to my ownership of this theme. can't figure out why something like this would be included.

--- a/style.css
+++ b/style.css
@@ -1014,7 +1014,6 @@ ul {
 .article-body ul, .article-body ol {
 	padding-left: 20px;
 	list-style-position: outside;
-	overflow: hidden;
 }
 
 .article-body ul li {
